# SiRender

./: CMakeLists.txt  README.md
SrdFile/Shader/: shader.cl
include/SrdApp/: null.hpp  shader.hpp
src/SrdApp/: main.cpp  shader.cpp
